tests/fixtures/invalid/round_str_none.py
# Cannot call round() with Str, None
x = round("hello", None)
